# harness-kit

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  harness-restore.sh  harness.yaml.example  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude-plugin/: marketplace.json
.github/workflows/: deploy-docs.yml  evals.yml  validate.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  app.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: claude_md.rs  hooks.rs  mod.rs  plugins.rs  settings.rs
docs/: claude-md-conventions.md  plugins-vs-skills.md
evals/: config.py  grader.py  render_results.py  requirements.txt  results.py  runner.py
marketplace/: package.json  tailwind.config.ts
marketplace/app/: layout.tsx  page.tsx
marketplace/lib/: supabase.ts  types.ts
marketplace/supabase/: seed.ts
profiles/: data-engineer.yaml  full-stack-engineer.yaml  research-knowledge.yaml
scripts/: rebuild-research-index.py
skills/research/: README.md  SKILL.md
website/: docusaurus.config.js  package-lock.json  package.json  pnpm-lock.yaml  sidebars.js  source.config.ts
website/app/: global.css  layout.tsx  page.tsx
website/blog/: 2026-03-08-introducing-harness-kit.md  2026-03-09-v0-2-0.md  2026-03-11-v0-3-0.md  authors.yml
website/docs/: faq.md
website/lib/: remark-embed.mjs  source.ts
website/static/: CNAME
(+170 files in other folders)
